objects/AccountBeacon__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdHS__c</fullName>
        <label>IdHS</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdWebDC__c</fullName>
        <label>IdWebDC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AccountBeacon</label>
    <nameField>
        <label>AccountBeacon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountBeacons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>